--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -14,6 +14,7 @@
     "@esveo-agar/shared": "^1.0.0",
     "@types/node": "^22.7.6",
     "@types/ws": "^8.5.12",
+    "immer": "^10.1.1",
     "ws": "^8.18.0"
   }
 }
